# rvnc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/blyss/rvnc/: MainActivity.java  RfbClient.java  VncView.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: styles.xml
server/: Cargo.toml
server/src/: capture.rs  main.rs  rfb.rs
src/: gui.rs  main.rs  server.rs
